[package]
name = "fruit_shop_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fruit_shop"

[dependencies]

[dev-dependencies]
fake = "~2.3"
uuid = { version = "1.4.1", features = ["v4"] }
